--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
 
 /* ----- zde zacni psat vlastni css ----- */
 
+body {
+    background-color: #f5f5f5;
+}
+
 .zbozi {
     font-family: 'Rubik', sans-serif;
     font-size: 400;
@@ -31,7 +35,8 @@ body {
     justify-content: space-between;
     border-radius: 2%;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
-    margin: 0px auto;
+    margin: 60px auto;
+    background-color: white;
 }
 
 .vizual {
@@ -39,14 +44,47 @@ body {
     width: 335px;
     order: 1;
     border-top-left-radius: 50%;
+    padding: 30px;
 }
 
 .detaily {
     order: 2;
     width: 335px;
+    padding: 30px;
 }
 
 .bota {
     position: absolute;
+    right: 8px;
+	bottom: 10px;
 }
 
+.nazev {
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin: 0px;
+}
+
+.slogan {
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0;
+}
+
+.cenovka {
+    position: absolute;
+    right: 20px;
+    bottom: 30px;
+    text-align: right;
+}
+
+.zaruka {
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.cena {
+    font-size: 20px;
+    font-weight: 500;
+}
