--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ body {
 
 .zbozi {
     font-family: 'Rubik', sans-serif;
-    font-size: 400;
+    font-size: 14px;
+    font-weight: 400;
     width: 670px;
     height: 440px;
     display: flex;
@@ -87,4 +88,17 @@ body {
 .cena {
     font-size: 20px;
     font-weight: 500;
+}
+
+.akce a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    width: 120px;
+    border-radius: 7%;
+    background-color: #f15f42;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
 }
