zaobleni leve casti
nechapem, preco mi to neprepisalo zaoblenie - radius, ked ho mam celkovo nastaveny na cely obdelnik  v triede .zbozi
tak som to doplnila cez border-left-(top/bottom)-radius

--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ body {
     order: 1;
     padding: 30px;
     background: linear-gradient(135deg, #06d7c1,#06d7c1 60%,#50cc49);
+    border-top-left-radius: 2%;
+    border-bottom-left-radius: 2%;
+
 }
 .logo {
    padding-bottom: 30px;
